# kov_evl_longestsubstring

./: CMakeLists.txt  README.md  package.xml
launch/: launch_example1.launch.py  launch_file.py
src/: string_generator_node.cpp  substring_finder_node.cpp
